--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-requests==2.31.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
-Flask-CORS==4.0.0
-
+Flask
+Flask-Cors
+Flask-SQLAlchemy
+psycopg2-binary  # Para conectar ao PostgreSQL
+requests
+gunicorn         # Servidor de produção
